@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 CVS changes since last release:
 
+common/object.c: Have update_object map the look window for redraw if
+   the object is not something the client normally animates (like a lever).
+   MSW 2001-04-27
+
 server/apply.c: Modify apply_id_altar check for player - had a && instead of
     a ||.
 socket/item.c: Modify ApplyCmd so a removed player can not apply objects.
